--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,12 @@ find_package(OpenCV REQUIRED)
 find_package(Threads)
 find_package(Boost REQUIRED COMPONENTS program_options filesystem)
 
+if (NOT DEFINED RVISION_MAJOR_VERSION)
+    set(RVISION_MAJOR_VERSION 1)
+endif ()
+if (NOT DEFINED RVISION_MINOR_VERSION)
+    set(RVISION_MINOR_VERSION 0)
+endif ()
 
 set(EXT_PROJECTS_DIR ${PROJECT_SOURCE_DIR}/ext)
 add_subdirectory(${EXT_PROJECTS_DIR}/gtest)
